# TpFinal

./: .gitignore  CMakeLists.txt  README.md  TpFinal.cbp  main.cpp  run.sh
data/: game_display.h
functions/: cuestions.cpp  game_display.cpp  game_logic.cpp  logica_batalla.cpp  tienda.cpp  utils.cpp
headers/: constants.h  cuestions.h  game_display.h  game_logic.h  logica_batalla.h  tienda.h  utils.h
